	William Lyvers
	Sakari Maaranen
	Jan Materne
	Markus M. May
	Stephen Nesbitt
	Joshua Nichols
	Bernard Niset
	David Maplesden
	Glen Marchesani
	Mathias Muller
	Peter Oxenham
	Emmanuel Pellereau
	Roshan Punnoose
	Jean-Baptiste Quenot
	Damon Rand
	Geoff Reedy
	Christian Riege
	Andreas Sahlbach
	Adrian Sandor 	
	Ruslan Shevchenko
	John Shields
	Johan Stuyts
	Jason Trump
	Tjeerd Verhagen
	John Williams
	Patrick Woodworth
	Jaroslaw Wypychowski

   trunk version
=====================================
- NEW: Better support for local builds (IVY-857)
- NEW: Retain original dependency constraint rules in resolved ivy file (IVY-739)
- NEW: Add a new resolve mode (optionally per module) to utilize dynamic constraint rule metadata (IVY-740)
- NEW: Add transitive dependency version and branch override mechanism (IVY-784)
- NEW: Add new packager resolver (IVY-829) (thanks to Archie Cobbs)

- IMPROVEMENT: undeprecate configure task (IVY-849)
- IMPROVEMENT: Detect missing artifacts on publish asap (IVY-862)
- IMPROVEMENT: Allow to set the branch at deliver/publish time (IVY-859)
- IMPROVEMENT: Add defaultconf in publications tag of ivy file (IVY-801)
- IMPROVEMENT: Support atomic publish with sub directory structure (IVY-856)
- IMPROVEMENT: Provide ant task to retrieve information from published ivy modules (IVY-838) (thanks to David Maplesden)
- IMPROVEMENT: Install task fails but reason is not displayed without using -debug or -verbose (IVY-834)
- IMPROVEMENT: SSH resolver doesn't support keyboard-interactive authentication (IVY-836) (thanks to Tobias Himstedt)
- IMPROVEMENT: declare source and javadoc artifacts in maven2 modules (IVY-325)
- IMPROVEMENT: Set the last modified attribute of files downloaded from repositories (IVY-823)
- IMPROVEMENT: If DNS is playing up, Ivy takes a lot longer to sort project dependencies (IVY-817)
- IMPROVEMENT: make it possible to specify permissions of published files for the SSH resolver (IVY-764)