@@ -63,6 +63,16 @@ name|java
 operator|.
 name|util
 operator|.
+name|Collections
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|Date
 import|;
 end_import
@@ -26309,6 +26319,22 @@ name|exists
 argument_list|()
 argument_list|)
 expr_stmt|;
+name|Map
+name|cmap
+init|=
+operator|new
+name|HashMap
+argument_list|()
+decl_stmt|;
+name|cmap
+operator|.
+name|put
+argument_list|(
+literal|"classifier"
+argument_list|,
+literal|"asl"
+argument_list|)
+expr_stmt|;
 name|assertTrue
 argument_list|(
 name|getArchiveFileInCache
@@ -26319,6 +26345,9 @@ literal|"org.apache"
 argument_list|,
 literal|"test-classified"
 argument_list|,
+literal|null
+comment|/* branch */
+argument_list|,
 literal|"1.0"
 argument_list|,
 literal|"test-classified"
@@ -26326,6 +26355,8 @@ argument_list|,
 literal|"jar"
 argument_list|,
 literal|"jar"
+argument_list|,
+name|cmap
 argument_list|)
 operator|.
 name|exists
@@ -26460,6 +26491,8 @@ literal|"org.apache"
 argument_list|,
 literal|"test-sources"
 argument_list|,
+literal|null
+argument_list|,
 literal|"1.0"
 argument_list|,
 literal|"test-sources"
@@ -26467,6 +26500,15 @@ argument_list|,
 literal|"source"
 argument_list|,
 literal|"jar"
+argument_list|,
+name|Collections
+operator|.
+name|singletonMap
+argument_list|(
+literal|"classifier"
+argument_list|,
+literal|"sources"
+argument_list|)
 argument_list|)
 decl_stmt|;
 name|assertTrue
@@ -26618,6 +26660,8 @@ literal|"org.apache"
 argument_list|,
 literal|"test-sources"
 argument_list|,
+literal|null
+argument_list|,
 literal|"1.0"
 argument_list|,
 literal|"test-sources"
@@ -26625,6 +26669,15 @@ argument_list|,
 literal|"source"
 argument_list|,
 literal|"jar"
+argument_list|,
+name|Collections
+operator|.
+name|singletonMap
+argument_list|(
+literal|"classifier"
+argument_list|,
+literal|"sources"
+argument_list|)
 argument_list|)
 decl_stmt|;
 name|assertTrue
@@ -26659,6 +26712,8 @@ literal|"org.apache"
 argument_list|,
 literal|"test-sources"
 argument_list|,
+literal|null
+argument_list|,
 literal|"1.0"
 argument_list|,
 literal|"test-sources"
@@ -26666,6 +26721,15 @@ argument_list|,
 literal|"javadoc"
 argument_list|,
 literal|"jar"
+argument_list|,
+name|Collections
+operator|.
+name|singletonMap
+argument_list|(
+literal|"classifier"
+argument_list|,
+literal|"javadoc"
+argument_list|)
 argument_list|)
 decl_stmt|;
 name|assertTrue
@@ -31169,6 +31233,91 @@ argument_list|,
 name|type
 argument_list|,
 name|ext
+argument_list|)
+return|;
+block|}
+specifier|private
+name|File
+name|getArchiveFileInCache
+parameter_list|(
+name|Ivy
+name|ivy
+parameter_list|,
+name|String
+name|organisation
+parameter_list|,
+name|String
+name|module
+parameter_list|,
+name|String
+name|branch
+parameter_list|,
+name|String
+name|revision
+parameter_list|,
+name|String
+name|artifactName
+parameter_list|,
+name|String
+name|type
+parameter_list|,
+name|String
+name|ext
+parameter_list|,
+name|Map
+name|extraAttrs
+parameter_list|)
+block|{
+name|ModuleRevisionId
+name|mrid
+init|=
+name|ModuleRevisionId
+operator|.
+name|newInstance
+argument_list|(
+name|organisation
+argument_list|,
+name|module
+argument_list|,
+name|branch
+argument_list|,
+name|revision
+argument_list|)
+decl_stmt|;
+name|DefaultArtifact
+name|artifact
+init|=
+operator|new
+name|DefaultArtifact
+argument_list|(
+name|mrid
+argument_list|,
+operator|new
+name|Date
+argument_list|()
+argument_list|,
+name|artifactName
+argument_list|,
+name|type
+argument_list|,
+name|ext
+argument_list|,
+name|extraAttrs
+argument_list|)
+decl_stmt|;
+return|return
+name|TestHelper
+operator|.
+name|getRepositoryCacheManager
+argument_list|(
+name|ivy
+argument_list|,
+name|mrid
+argument_list|)
+operator|.
+name|getArchiveFileInCache
+argument_list|(
+name|artifact
 argument_list|)
 return|;
 block|}
